# AprioritHomeWork6

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Client/Header/: Client.h  Host.h  IClient.h
Client/Source/: Client.cpp  Host.cpp  IClient.cpp
Common/: Buffer.h  CommunicationUnit.cpp  CommunicationUnit.h  Core.h
Server/: CMakeLists.txt  main.cpp
Server/Header/: IServer.h  Server.h  Session.h
Server/Source/: IServer.cpp  Server.cpp  Session.cpp
